# simm-rs

./: .gitignore  Cargo.toml  README.md
examples/: run_single_test.rs
src/: agg_margins.rs  agg_sensitivities.rs  constants.rs  engine_config.rs  file_utils.rs  lib.rs  margin_risk_class.rs  simm_utils.rs  v2_5.rs  v2_6.rs  v2_7.rs  wnc.rs
tests_2_5/: C100_crif.csv  C101_crif.csv  C102_calc_output.csv  C103_calc_output.csv  C104_expected_output.csv  C105_expected_output.csv  C107_expected_output.csv  C108_crif.csv  C108_expected_output.csv  C109_calc_output.csv  C110_expected_output.csv  C111_calc_output.csv  C112_expected_output.csv  C113_calc_output.csv  C113_crif.csv  C114_expected_output.csv  C115_crif.csv  C115_expected_output.csv  C116_crif.csv  C116_expected_output.csv  C118_crif.csv  C118_expected_output.csv  C119_crif.csv  C119_expected_output.csv  C11_expected_output.csv  C120_calc_output.csv  C120_crif.csv  C121_calc_output.csv  C122_calc_output.csv  C123_calc_output.csv  C124_calc_output.csv  C125_calc_output.csv  C125_crif.csv  C126_calc_output.csv  C126_crif.csv  C127_calc_output.csv  C128_calc_output.csv  C129_calc_output.csv  C12_crif.csv  C12_expected_output.csv  (+487 more)
tests_2_6/: C102_calc_output.csv  C102_crif.csv  C104_crif.csv  C106_calc_output.csv  C106_crif.csv  C107_calc_output.csv  C108_calc_output.csv  C109_calc_output.csv  C10_calc_output.csv  C10_crif.csv  C110_calc_output.csv  C111_crif.csv  C112_calc_output.csv  C112_crif.csv  C113_calc_output.csv  C114_calc_output.csv  C115_calc_output.csv  C116_calc_output.csv  C117_calc_output.csv  (+447 more)
(+495 files in other folders)
